Add two new recipes and minor changes on another
The steps of the momofuku recipe where a bit
shallow so I tried to give more detail on some
parts.

--- a/recipes/momofuku.html
+++ b/recipes/momofuku.html
@@ -12,7 +12,7 @@
       src="../resources/images/momofuku-eggs.jpg"
       alt="Traditional korean
     breakfast. Contains rice and two fried eggs with soy sauce"
-      width="500"
+      width="525"
       height="500"
     />
     <h2>Description</h2>
@@ -34,20 +34,22 @@
     <h2>Steps</h2>
     <ol>
       <li>Cut green onion and ham into little squares</li>
-      <li>Add sesame oil to a pan and wait until it's hot enough</li>
+      <li>
+        Add sesame oil to a pan and wait until it's hot enough (set the pan to
+        medium heat)
+      </li>
       <li>Add two eggs without breaking their yolk</li>
-      <li>Cook the egg white</li>
+      <li>Carefully separate the egg white from the yolk and cook it</li>
       <li>
         When the egg white is cooked, add a tablespoon of sesame oil on the eggs
       </li>
       <li>Add a table spoon of soy sauce over the eggs</li>
       <li>Break the egg yolks and mix everything together</li>
-      <li>Add the ham and mix</li>
-      <li>You can turn off the heat by this moment</li>
+      <li>Add the ham and mix (You can turn off the heat by this moment)</li>
       <li>
         When cooked (be careful not to dry the eggs), add it to a bowl with rice
       </li>
-      <li>Add the green onion</li>
+      <li>Add the green onion you sliced on top of the eggs</li>
       <li>Add a teaspoon of momofuku and mix together</li>
     </ol>
     <p>
