--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>"Odin Recipes"</h1>
     <ul>
       <li><a href="recipes/momofuku.html">Momofuku recipe</a></li>
+      <li><a href="recipes/tuna-omelette.html">Tuna omelette</a></li>
+      <li><a href="recipes/oreo-cheesecake.html">Oreo cheesecake</a></li>
     </ul>
   </body>
 </html>
