Add css rel, change recipes element

--- a/recipes/momofuku.html
+++ b/recipes/momofuku.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Momofuku recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Momofuku korean breakfast</h1>
+    <h1 class="title">Momofuku korean breakfast</h1>
     <a href="../index.html">Home</a>
     <br />
     <img
