--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Recipe Page</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>"Odin Recipes"</h1>
-    <ul>
-      <li><a href="recipes/momofuku.html">Momofuku recipe</a></li>
-      <li><a href="recipes/tuna-omelette.html">Tuna omelette</a></li>
-      <li><a href="recipes/oreo-cheesecake.html">Oreo cheesecake</a></li>
-    </ul>
+    <h1 class="title">Odin Recipes</h1>
+    <nav class="recipe-list">
+        <a class="recipe" href="recipes/momofuku.html">Momofuku recipe</a>
+        <a class="recipe" href="recipes/tuna-omelette.html">Tuna omelette</a>
+        <a class="recipe" href="recipes/oreo-cheesecake.html">Oreo cheesecake</a>
+      </div>
   </body>
 </html>
