--- a/recipes/tuna-omelette.html
+++ b/recipes/tuna-omelette.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Tuna Omelette Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Tuna omelette</h1>
+    <h1 class="title">Tuna omelette</h1>
     <a href="../index.html">Home</a>
     <br />
     <img
