--- a/recipes/momofuku.html
+++ b/recipes/momofuku.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="title">Momofuku korean breakfast</h1>
-    <a href="../index.html">Home</a>
+    <a class="home-pg-btn" href="../index.html">Home</a>
     <br />
     <img
       src="../resources/images/momofuku-eggs.jpg"
