--- a/recipes/oreo-cheesecake.html
+++ b/recipes/oreo-cheesecake.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="title">Oreo Cheesecake</h1>
-    <a href="../index.html">Home</a>
+    <a class="home-pg-btn" href="../index.html">Home</a>
     <br />
     <img
       src="../resources/images/oreo-cheesecake.png"
