--- a/recipes/tuna-omelette.html
+++ b/recipes/tuna-omelette.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="title">Tuna omelette</h1>
-    <a href="../index.html">Home</a>
+    <a class="home-pg-btn" href="../index.html">Home</a>
     <br />
     <img
       src="../resources/images/tuna-omelette.jpg"
