Add style to recipe images

--- a/recipes/momofuku.html
+++ b/recipes/momofuku.html
@@ -15,6 +15,7 @@
     breakfast. Contains rice and two fried eggs with soy sauce"
       width="525"
       height="500"
+      class="recipe-img"
     />
     <h2>Description</h2>
     <p>
