--- a/recipes/tuna-omelette.html
+++ b/recipes/tuna-omelette.html
@@ -14,6 +14,7 @@
       alt="A tuna omelette. It's made of tuna and eggs"
       width="500"
       height="500"
+      class="recipe-img"
     />
     <footer>
       Credit of the image:
