--- a/recipes/oreo-cheesecake.html
+++ b/recipes/oreo-cheesecake.html
@@ -14,6 +14,7 @@
       alt="An oreo cheesecake with the logo of the channel where it was taken from(delicious day)"
       width="700"
       height="500"
+      class="recipe-img"
     />
     <h2>Description</h2>
     <p>
