Add recipe card style

--- a/recipes/momofuku.html
+++ b/recipes/momofuku.html
@@ -17,52 +17,68 @@
       height="500"
       class="recipe-img"
     />
-    <h2>Description</h2>
-    <p>
-      This recipe is a variation of a traditional korean breakfast that I found
-      via youtube. It has more ingredients than the original but it's still as
-      simple and delicious as that one.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Sesame oil</li>
-      <li>Soy sauce</li>
-      <li>Two large eggs</li>
-      <li>Cooked white rice</li>
-      <li>Momofuku chili crunch</li>
-      <li>Turkey breast ham</li>
-      <li>Green onion</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Cut green onion and ham into little squares</li>
-      <li>
-        Add sesame oil to a pan and wait until it's hot enough (set the pan to
-        medium heat)
-      </li>
-      <li>Add two eggs without breaking their yolk</li>
-      <li>Carefully separate the egg white from the yolk and cook it</li>
-      <li>
-        When the egg white is cooked, add a tablespoon of sesame oil on the eggs
-      </li>
-      <li>Add a table spoon of soy sauce over the eggs</li>
-      <li>Break the egg yolks and mix everything together</li>
-      <li>Add the ham and mix (You can turn off the heat by this moment)</li>
-      <li>
-        When cooked (be careful not to dry the eggs), add it to a bowl with rice
-      </li>
-      <li>Add the green onion you sliced on top of the eggs</li>
-      <li>Add a teaspoon of momofuku and mix together</li>
-    </ol>
-    <p>
-      As I mentioned, I learned about the recipe via youtube, and modified it
-      through time. Here's a link to these videos: The first one it's on a
-      chanel called
-      <a href="https://www.youtube.com/shorts/MBnJsEbDflA">Chef Chris Cho</a>
-      and the other one is called
-      <a href="https://youtu.be/N13D0yO5xm0?si=Tm3QqrfZBDY1Qv-b"
-        >Future Neighbor</a
-      >.
-    </p>
+    <div class="recipe-card">
+      <div class="recipe-descr">
+        <h2>Description</h2>
+        <p>
+          This recipe is a variation of a traditional korean breakfast that I
+          found via youtube. It has more ingredients than the original but it's
+          still as simple and delicious as that one.
+        </p>
+      </div>
+      <div class="recipe-ingr">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>Sesame oil</li>
+          <li>Soy sauce</li>
+          <li>Two large eggs</li>
+          <li>Cooked white rice</li>
+          <li>Momofuku chili crunch</li>
+          <li>Turkey breast ham</li>
+          <li>Green onion</li>
+        </ul>
+      </div>
+      <div class="recipe-steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>Cut green onion and ham into little squares</li>
+          <li>
+            Add sesame oil to a pan and wait until it's hot enough (set the pan
+            to medium heat)
+          </li>
+          <li>Add two eggs without breaking their yolk</li>
+          <li>Carefully separate the egg white from the yolk and cook it</li>
+          <li>
+            When the egg white is cooked, add a tablespoon of sesame oil on the
+            eggs
+          </li>
+          <li>Add a table spoon of soy sauce over the eggs</li>
+          <li>Break the egg yolks and mix everything together</li>
+          <li>
+            Add the ham and mix (You can turn off the heat by this moment)
+          </li>
+          <li>
+            When cooked (be careful not to dry the eggs), add it to a bowl with
+            rice
+          </li>
+          <li>Add the green onion you sliced on top of the eggs</li>
+          <li>Add a teaspoon of momofuku and mix together</li>
+        </ol>
+      </div>
+      <div class="recipe-extra">
+        <p>
+          As I mentioned, I learned about the recipe via youtube, and modified
+          it through time. Here's a link to these videos: The first one it's on
+          a chanel called
+          <a href="https://www.youtube.com/shorts/MBnJsEbDflA"
+            >Chef Chris Cho</a
+          >
+          and the other one is called
+          <a href="https://youtu.be/N13D0yO5xm0?si=Tm3QqrfZBDY1Qv-b"
+            >Future Neighbor</a
+          >.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
