--- a/recipes/oreo-cheesecake.html
+++ b/recipes/oreo-cheesecake.html
@@ -16,35 +16,45 @@
       height="500"
       class="recipe-img"
     />
-    <h2>Description</h2>
-    <p>
-      This is a no oven oreo cheesecake recipe that I found a while ago on
-      youtube. If you want the video version, you can watch it on the
-      <a href="https://youtu.be/aefMZtFS90M?si=jofxoQ-EpXzL_mX6"
-        >매일맛나 delicious day</a
-      >
-      channel.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>20 Oreo Cookies</li>
-      <li>200g cream cheese</li>
-      <li>200g whipped cream</li>
-      <li>3 tablespoons of sugar</li>
-      <li>3 tablespoons of melted butter</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Make 10 cookies into powder</li>
-      <li>Add 3 tablespoons of melted butter to the cookie powder and mix</li>
-      <li>Add cream cheese, whipped cream, and 5 cookies</li>
-      <li>Add 3 spoons of sugar and mix</li>
-      <li>Put cooking foil on the prepared square tube</li>
-      <li>Add cookie powder and press flat</li>
-      <li>Add the mixed cream cheese and make it flat</li>
-      <li>Freeze for more than 4 hours into the freezer</li>
-      <li>After 4 hours, cut into a good size to eat</li>
-      <li>Decorate with 5 cookies</li>
-    </ol>
+    <div class="recipe-card">
+      <div class="recipe-descr">
+        <h2>Description</h2>
+        <p>
+          This is a no oven oreo cheesecake recipe that I found a while ago on
+          youtube. If you want the video version, you can watch it on the
+          <a href="https://youtu.be/aefMZtFS90M?si=jofxoQ-EpXzL_mX6"
+            >매일맛나 delicious day</a
+          >
+          channel.
+        </p>
+      </div>
+      <div class="recipe-ingr">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>20 Oreo Cookies</li>
+          <li>200g cream cheese</li>
+          <li>200g whipped cream</li>
+          <li>3 tablespoons of sugar</li>
+          <li>3 tablespoons of melted butter</li>
+        </ul>
+      </div>
+      <div class="recipe-steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>Make 10 cookies into powder</li>
+          <li>
+            Add 3 tablespoons of melted butter to the cookie powder and mix
+          </li>
+          <li>Add cream cheese, whipped cream, and 5 cookies</li>
+          <li>Add 3 spoons of sugar and mix</li>
+          <li>Put cooking foil on the prepared square tube</li>
+          <li>Add cookie powder and press flat</li>
+          <li>Add the mixed cream cheese and make it flat</li>
+          <li>Freeze for more than 4 hours into the freezer</li>
+          <li>After 4 hours, cut into a good size to eat</li>
+          <li>Decorate with 5 cookies</li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
