--- a/recipes/tuna-omelette.html
+++ b/recipes/tuna-omelette.html
@@ -23,41 +23,50 @@
         >From deliciously rushed</a
       >
     </footer>
-    <h2>Description</h2>
-    <p>
-      This is a simple and easy recipe that tastes great to those that love
-      tuna. It's an omelette (or multiple omelettes to be more accurate) with a
-      single ingredient, tuna, where the mix of flavours gives it its unique
-      taste. Pd: We call it "tortillas de atún", so it's not exactly an
-      omelette, but it's the word that I found the most fitting for the recipe.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>3 Eggs</li>
-      <li>1 medium can of tuna</li>
-      <li>Salt</li>
-      <li>Oil</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Break the eggs into a bowl where you can mix them</li>
-      <li>Add salt to the eggs</li>
-      <li>Whisk them until you have a foam like consistency</li>
-      <li>
-        In a medium temperature pan (with oil), carefully add two tablespoons of
-        the eggs into it
-      </li>
-      <li>Add tuna on top of the eggs that you placed on the pan</li>
-      <li>
-        Cover the top with one tablespoon of eggs (add another if it's not
-        covered yet)
-      </li>
-      <li>After 3-5 minutes, carefully turn it around</li>
-      <li>
-        After 1-3 minutes, remove it from the pan, and there you have your first
-        tuna omelette
-      </li>
-      <li>Repeat the process until you have no more eggs in the bowl</li>
-    </ol>
+    <div class="recipe-card">
+      <div class="recipe-descr">
+        <h2>Description</h2>
+        <p>
+          This is a simple and easy recipe that tastes great to those that love
+          tuna. It's an omelette (or multiple omelettes to be more accurate)
+          with a single ingredient, tuna, where the mix of flavours gives it its
+          unique taste. Pd: We call it "tortillas de atún", so it's not exactly
+          an omelette, but it's the word that I found the most fitting for the
+          recipe.
+        </p>
+      </div>
+      <div class="recipe-ingr">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>3 Eggs</li>
+          <li>1 medium can of tuna</li>
+          <li>Salt</li>
+          <li>Oil</li>
+        </ul>
+      </div>
+      <div class="recipe-steps">
+        <h2>Steps</h2>
+        <ol>
+          <li>Break the eggs into a bowl where you can mix them</li>
+          <li>Add salt to the eggs</li>
+          <li>Whisk them until you have a foam like consistency</li>
+          <li>
+            In a medium temperature pan (with oil), carefully add two
+            tablespoons of the eggs into it
+          </li>
+          <li>Add tuna on top of the eggs that you placed on the pan</li>
+          <li>
+            Cover the top with one tablespoon of eggs (add another if it's not
+            covered yet)
+          </li>
+          <li>After 3-5 minutes, carefully turn it around</li>
+          <li>
+            After 1-3 minutes, remove it from the pan, and there you have your
+            first tuna omelette
+          </li>
+          <li>Repeat the process until you have no more eggs in the bowl</li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
